--- a/manifest.json
+++ b/manifest.json
@@ -45,7 +45,7 @@
   },
   
   "oauth2": {
-    "client_id": "REPLACE_WITH_YOUR_CLIENT_ID.apps.googleusercontent.com",
+    "client_id": "818839422029-fatln4l2lnlil38t5nu46out4p9sjgcl.apps.googleusercontent.com",
     "scopes": [
       "https://www.googleapis.com/auth/classroom.courses.readonly",
       "https://www.googleapis.com/auth/classroom.coursework.students",
